[gd_scene load_steps=3 format=2]

[ext_resource path="res://script/LightBeam.gd" type="Script" id=1]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.990909 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[node name="LightBeam" type="Node2D"]
script = ExtResource( 1 )

[node name="LightBeamLine" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width_curve = SubResource( 1 )

[node name="LightRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 2000, 0 )
collide_with_areas = true
